raw-manifests/local-management/network-debug-app/local-1/service-entry-1.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: networking-debug-app-service-entry-1
  namespace: istio-system
spec:
  hosts:
    - "nda1.management.local"
  location: MESH_INTERNAL
  resolution: DNS
  ports:
    - name: http
      number: 8081 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTP
    - name: https
      number: 44301 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTPS
